# selium-modules

./: README.md
.github/: breezy.yml
.github/workflows/: audit.yml  ci.yml  publish.yml  release.yml
atlas/: Cargo.toml  README.md
atlas/client/: Cargo.toml
atlas/client/src/: lib.rs
atlas/server/: Cargo.toml
remote-client/: Cargo.toml  README.md
remote-client/cli/: Cargo.toml
remote-client/cli/src/: main.rs
remote-client/client/: Cargo.toml
remote-client/client/src/: lib.rs
remote-client/protocol/schemas/: remote_client.fbs
remote-client/protocol/src/: lib.rs
remote-client/protocol/src/fbs/remote_client/protocol/: capability_generated.rs  process_start_request_generated.rs
remote-client/server/: Cargo.toml
remote-client/server/src/: lib.rs
switchboard/: Cargo.toml  README.md
switchboard/client/: Cargo.toml
switchboard/client/src/: lib.rs  messaging.rs
switchboard/server/: Cargo.toml
tests/request-reply/: Cargo.toml  build.rs
tests/request-reply/schemas/: message.fbs
tests/request-reply/src/: lib.rs
tests/request-reply/src/fbs/: mod.rs
tests/request-reply/src/fbs/tests/request_reply/: message_generated.rs
tests/request-reply/tests/: request_reply.rs
