[workspace]
resolver = "2"
members = ["client", "protocol", "server"]

[workspace.package]
version = "0.1.1"
edition = "2024"
description = "Selium module for indexing and discovering resources with URIs"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium-modules"
license = "MPL-2.0"
keywords = ["atlas", "module", "selium", "uri"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
flatbuffers = { version = "25.12", default-features = false }
flatbuffers-build = { version = "0.2", default-features = false }
flatc-fork = { version = "0.5", default-features = false }
futures = { version = "0.3", default-features = false }
selium-atlas-protocol = { path = "protocol", version = "0.1.1" }
selium-switchboard = { path = "../switchboard/client", version = "0.2", default-features = false }
selium-userland = { version = "1.0.0-alpha.2", default-features = false }
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1", default-features = false }
url = { version = "2.5", default-features = false }
