[workspace]
resolver = "2"
members = ["cli", "client", "server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Selium module for supporting remote clients"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium-modules"
license = "MPL-2.0"
keywords = ["client", "module", "remote", "selium"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.5", default-features = false }
futures = { version = "0.3", default-features = false }
quinn = { version = "0.11", default-features = false }
rkyv = { version = "0.8", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pki-types = { version = "1.13", default-features = false }
selium-abi = { path = "../../../selium/switchboard/system/abi" }
selium-userland = { path = "../../../selium/switchboard/system/userland" }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.48", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
