[workspace]
resolver = "2"
members = ["cli", "client", "protocol", "server"]

[workspace.package]
version = "0.3.0"
edition = "2024"
description = "Selium module for supporting remote clients"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium-modules"
license = "MPL-2.0"
keywords = ["client", "module", "remote", "selium"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.5", default-features = false }
flatbuffers = { version = "25.12", default-features = false }
flatbuffers-build = { version = "0.2", default-features = false }
flatc-fork = { version = "0.5.0", default-features = false }
futures = { version = "0.3", default-features = false }
quinn = { version = "0.11", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pki-types = { version = "1.14", default-features = false }
selium-abi = { version = "1.0.0-alpha.3", default-features = false }
selium-remote-client = { path = "client", version = "0.3.0" }
selium-remote-client-protocol = { path = "protocol", version = "0.3.0" }
selium-userland = { version = "1.0.0-alpha.3", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.49", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
