[workspace]
resolver = "2"
members = ["client", "core", "protocol", "server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Selium module for abstracting channel management and messaging patterns"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium-modules"
license = "MPL-2.0"
keywords = ["messaging", "module", "selium", "switchboard"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
flatbuffers = { version = "25.12", default-features = false }
flatbuffers-build = { version = "0.2", default-features = false }
flatc = { git = "https://github.com/petehayes102/flatc.rs", branch = "v25.12.19" }
futures = { version = "0.3", default-features = false }
pin-project = { version = "1.1", default-features = false }
quinn = { version = "0.11", default-features = false }
rkyv = { version = "0.8", default-features = false }
rustls = { version = "0.23", default-features = false }
rustls-pki-types = { version = "1.13", default-features = false }
selium-userland = { path = "../../../selium/switchboard/system/userland" }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.48", default-features = false }
tracing = { version = "0.1", default-features = false }
