[workspace]
resolver = "2"
members = ["client", "core", "protocol", "server"]

[workspace.package]
version = "0.3.0"
edition = "2024"
description = "Selium module for abstracting channel management and messaging patterns"
readme = "README.md"
homepage = "https://selium.com"
repository = "https://github.com/seliumlabs/selium-modules"
license = "MPL-2.0"
keywords = ["messaging", "module", "selium", "switchboard"]
categories = ["development-tools", "virtualization", "wasm"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
flatbuffers = { version = "25.12", default-features = false }
flatbuffers-build = { version = "0.2", default-features = false }
flatc-fork = { version = "0.5.0", default-features = false }
futures = { version = "0.3", default-features = false }
pin-project = { version = "1.1", default-features = false }
selium-switchboard-core = { path = "core", version = "0.3.0" }
selium-switchboard-protocol = { path = "protocol", version = "0.3.0" }
selium-userland = { version = "1.0.0-alpha.2", default-features = false }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.49", default-features = false }
tracing = { version = "0.1", default-features = false }
