[package]
name = "selium-remote-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/remote-client-{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/remote-client-{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/remote-client-{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[[bin]]
name = "selium"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "help", "std"] }
futures = { workspace = true, features = ["alloc", "std"] }
selium-remote-client = { workspace = true }
selium-userland = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "rt-multi-thread",
  "time",
] }
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "env-filter",
  "fmt",
  "json",
  "std",
] }
