[package]
name = "selium-remote-client-server"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[features]
atlas = []

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true, features = ["std"] }
selium-remote-client-protocol = { workspace = true }
selium-userland = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
