[package]
name = "selium-switchboard-server"
version.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true, features = ["std"] }
selium-switchboard-core = { path = "../core" }
selium-switchboard-protocol = { path = "../protocol" }
selium-userland = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
